--- a/jade/index.jade
+++ b/jade/index.jade
@@ -59,120 +59,125 @@ html
 								.col-md-offset-1.col-md-10.text-center
 									h1 Listado de Promociones
 									br
-								.col-md-offset-1.col-md-10.campania
-									.panel.panel-default
-										.panel-heading
-											.row
+								.col-md-12
+									.col-md-offset-1.col-md-10.campania
+										.panel.panel-default
+											.panel-heading
+												.row
+													.col-md-6.col-xs-12.text-center
+														h3.panel-title Titulo Cupón
+													.col-md-4.col-xs-12.text-center
+														h3.panel-title Estatus:  
+															strong  Activo
+													.col-md-1.col-xs-6.text-center
+														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
+														i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+															
+											.panel-body
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Cupón
+													| Descripción
 												.col-md-4.col-xs-12.text-center
-													h3.panel-title Estatus:  
-														strong  Activo
-												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
-												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
-														
-										.panel-body
-											.col-md-6.col-xs-12.text-center
-												| Descripción
-											.col-md-4.col-xs-12.text-center
-												| Fecha termino: 
-												strong  12/12/2017
-											.col-md-2.col-xs-12.text-center
-												| Descuento: 
-												strong  30%
+													| Fecha termino: 
+													strong  12/12/2017
+												.col-md-2.col-xs-12.text-center
+													| Descuento: 
+													strong  30%
 
-								.col-md-offset-1.col-md-10.campania
-									.panel.panel-default
-										.panel-heading
-											.row
+								.col-md-12
+									.col-md-offset-1.col-md-10.campania
+										.panel.panel-default
+											.panel-heading
+												.row
+													.col-md-6.col-xs-12.text-center
+														h3.panel-title Titulo Cupón
+													.col-md-4.col-xs-12.text-center
+														h3.panel-title Estatus:  
+															strong  Activo
+													.col-md-1.col-xs-6.text-center
+														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
+														i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+											.panel-body
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Cupón
+													| Descripción
 												.col-md-4.col-xs-12.text-center
-													h3.panel-title Estatus:  
-														strong  Activo
-												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
-												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
-										.panel-body
-											.col-md-6.col-xs-12.text-center
-												| Descripción
-											.col-md-4.col-xs-12.text-center
-												| Fecha termino: 
-												strong  12/12/2017
-											.col-md-2.col-xs-12.text-center
-												| Descuento: 
-												strong  30%
+													| Fecha termino: 
+													strong  12/12/2017
+												.col-md-2.col-xs-12.text-center
+													| Descuento: 
+													strong  30%
 
-								.col-md-offset-1.col-md-10.campania
-									.panel.panel-default
-										.panel-heading
-											.row
+								.col-md-12
+									.col-md-offset-1.col-md-10.campania
+										.panel.panel-default
+											.panel-heading
+												.row
+													.col-md-6.col-xs-12.text-center
+														h3.panel-title Titulo Cupón
+													.col-md-4.col-xs-12.text-center
+														h3.panel-title Estatus:  
+															strong  Activo
+													.col-md-1.col-xs-6.text-center
+														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
+														i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+											.panel-body
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Cupón
+													| Descripción
 												.col-md-4.col-xs-12.text-center
-													h3.panel-title Estatus:  
-														strong  Activo
-												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
-												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
-										.panel-body
-											.col-md-6.col-xs-12.text-center
-												| Descripción
-											.col-md-4.col-xs-12.text-center
-												| Fecha termino: 
-												strong  12/12/2017
-											.col-md-2.col-xs-12.text-center
-												| Descuento: 
-												strong  30%
-								.col-md-offset-1.col-md-10.campania
-									.panel.panel-default
-										.panel-heading
-											.row
+													| Fecha termino: 
+													strong  12/12/2017
+												.col-md-2.col-xs-12.text-center
+													| Descuento: 
+													strong  30%
+								.col-md-12
+									.col-md-offset-1.col-md-10.campania
+										.panel.panel-default
+											.panel-heading
+												.row
+													.col-md-6.col-xs-12.text-center
+														h3.panel-title Titulo Cupón
+													.col-md-4.col-xs-12.text-center
+														h3.panel-title Estatus:  
+															strong  Activo
+													.col-md-1.col-xs-6.text-center
+														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
+														i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+											.panel-body
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Cupón
+													| Descripción
 												.col-md-4.col-xs-12.text-center
-													h3.panel-title Estatus:  
-														strong  Activo
-												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
-												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
-										.panel-body
-											.col-md-6.col-xs-12.text-center
-												| Descripción
-											.col-md-4.col-xs-12.text-center
-												| Fecha termino: 
-												strong  12/12/2017
-											.col-md-2.col-xs-12.text-center
-												| Descuento: 
-												strong  30%
+													| Fecha termino: 
+													strong  12/12/2017
+												.col-md-2.col-xs-12.text-center
+													| Descuento: 
+													strong  30%
 
-								.col-md-offset-1.col-md-10.campania
-									.panel.panel-default
-										.panel-heading
-											.row
+								.col-md-12
+									.col-md-offset-1.col-md-10.campania
+										.panel.panel-default
+											.panel-heading
+												.row
+													.col-md-6.col-xs-12.text-center
+														h3.panel-title Titulo Cupón
+													.col-md-4.col-xs-12.text-center
+														h3.panel-title Estatus:  
+															strong  Activo
+													.col-md-1.col-xs-6.text-center
+														i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+													.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
+														i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+											.panel-body
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Cupón
+													| Descripción
 												.col-md-4.col-xs-12.text-center
-													h3.panel-title Estatus:  
-														strong  Activo
-												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
-												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
-										.panel-body
-											.col-md-6.col-xs-12.text-center
-												| Descripción
-											.col-md-4.col-xs-12.text-center
-												| Fecha termino: 
-												strong  12/12/2017
-											.col-md-2.col-xs-12.text-center
-												| Descuento: 
-												strong  30%
+													| Fecha termino: 
+													strong  12/12/2017
+												.col-md-2.col-xs-12.text-center
+													| Descuento: 
+													strong  30%
 								.col-md-offset-1.col-md-10
 									nav(aria-label='...')
 										ul.pager
