--- a/jade/index.jade
+++ b/jade/index.jade
@@ -14,7 +14,7 @@ html
 		br
 		.space
 		.container
-			.usuario
+			.usuario.barra
 				.row
 					.col-xs-offset-1.col-xs-10
 						h1 Inicia sesión en abc
