--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,7 +13,7 @@ html
 	body
 		br
 		.space
-		.container
+		.container.barra
 			.usuario.listado
 				.row
 					.col-md-offset-1.col-md-10
@@ -33,9 +33,7 @@ html
 										i.fa.fa-key(aria-hidden="true")
 									input.form-control.codigo(placeholder="Introduce tu contraseña", type="password")
 								br
-					.col-md-1
-						.barra
-							p as
+					
 					.col-xs-offset-1.col-xs-10.text-center
 						br
 						button.btn.btn-primary 
