--- a/jade/index.jade
+++ b/jade/index.jade
@@ -319,6 +319,113 @@ html
 					.col-md-offset-1.col-md-10
 						h1 Historial
 						br
+				.row
+					.col-md-12
+						.col-md-offset-1.col-md-10
+							#accordion.panel-group(role='tablist', aria-multiselectable='true')
+								.panel.panel-default(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseOne', aria-expanded='true', aria-controls='collapseOne')
+									#headingOne.panel-heading(role='tab')
+										h4.panel-title
+											.row
+												.col-md-6.text-center
+													h4.panel-title Nombre Cupón
+												.col-md-6.text-center
+													h4.panel-title Tipo de edición: 
+														strong  Tipo de edición
+									#collapseOne.panel-collapse.collapse.in(role='tabpanel', aria-labelledby='headingOne')
+										.panel-body
+											.row
+												.col-md-6
+													ul.list-group
+														li.list-group-item
+															span.badge 1231ASDS
+															| Código Cupón
+														li.list-group-item
+															span.badge 12312312
+															| Sucursal
+														li.list-group-item
+															span.badge 12ASDFA
+															| Clave puesto
+												.col-md-6
+													ul.list-group
+														li.list-group-item
+															span.badge asdfaassdf asdasfasdf asdfasdfasdf
+															| Nombre Ejecutivo
+														li.list-group-item
+															span.badge 02/29/2020
+															| Fecha edición
+														li.list-group-item
+															span.badge Eliminacón
+															| Tipo Edición
+								.panel.panel-default(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseTwo', aria-expanded='false', aria-controls='collapseTwo')
+									#headingTwo.panel-heading(role='tab')
+										h4.panel-title
+											.row
+												.col-md-6.text-center
+													h4.panel-title Nombre Cupón
+												.col-md-6.text-center
+													h4.panel-title Tipo de edición: 
+														strong  Tipo de edición
+									#collapseTwo.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingTwo')
+										.panel-body
+											.row
+												.col-md-6
+													ul.list-group
+														li.list-group-item
+															span.badge 1231ASDS
+															| Código Cupón
+														li.list-group-item
+															span.badge 12312312
+															| Sucursal
+														li.list-group-item
+															span.badge 12ASDFA
+															| Clave puesto
+												.col-md-6
+													ul.list-group
+														li.list-group-item
+															span.badge asdfaassdf asdasfasdf asdfasdfasdf
+															| Nombre Ejecutivo
+														li.list-group-item
+															span.badge 02/29/2020
+															| Fecha edición
+														li.list-group-item
+															span.badge Eliminacón
+															| Tipo Edición
+								.panel.panel-default(role='button', data-toggle='collapse', data-parent='#accordion', href='#collapseThree', aria-expanded='false', aria-controls='collapseThree')
+									#headingThree.panel-heading(role='tab')
+										h4.panel-title
+											.row
+												.col-md-6.text-center
+													h4.panel-title Nombre Cupón
+												.col-md-6.text-center
+													h4.panel-title Tipo de edición: 
+														strong  Tipo de edición
+									#collapseThree.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingThree')
+										.panel-body
+											.row
+												.col-md-6
+													ul.list-group
+														li.list-group-item
+															span.badge 1231ASDS
+															| Código Cupón
+														li.list-group-item
+															span.badge 12312312
+															| Sucursal
+														li.list-group-item
+															span.badge 12ASDFA
+															| Clave puesto
+												.col-md-6
+													ul.list-group
+														li.list-group-item
+															span.badge lkjhlkj asdfasdf aasd
+															| Nombre Ejecutivo
+														li.list-group-item
+															span.badge 02/29/2020
+															| Fecha edición
+														li.list-group-item
+															span.badge Eliminacón
+															| Tipo Edición
+
 		.space
 		br
 
