--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,10 +10,11 @@ html
 		link(rel='stylesheet', href='../css/custom.css')
 		link(rel="stylesheet", href="../font-awesome/css/font-awesome.min.css")
 
-	body.barra
+	body
+		.row.barra
 		br
 		.space
-		.container.barra
+		.container
 			.usuario.listado
 				.row 
 					.col-md-offset-1.col-md-10
@@ -313,7 +314,7 @@ html
 												.space
 		br
 		.space
-		.container.barra
+		.container
 			.usuario.listado
 				.row 
 					.col-md-offset-1.col-md-10
