--- a/jade/index.jade
+++ b/jade/index.jade
@@ -306,7 +306,7 @@ html
 												.input-group
 													.input-group-addon
 														i.fa.fa-commenting-o(aria-hidden="true")
-													textarea.form-control.descripcion(placeholder="Introduce una observaciones")
+													textarea.form-control.descripcion(placeholder="Introduce observaciones")
 												.space
 												button.btn.btn-primary 
 													i.fa.fa-trash-o.ev.fa-floppy-o  
