--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -8,6 +8,9 @@ body{
 	}
 	.usuario{
 		    border: 1px solid #bbb;
+			-webkit-box-shadow: 5px 5px 10px 3px rgba(0,0,0,0.75);
+			-moz-box-shadow: 5px 5px 10px 3px rgba(0,0,0,0.75);
+			box-shadow: 5px 5px 10px 3px rgba(0,0,0,0.75);
 	}
 }
 .space{
