--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -2,6 +2,9 @@ body{
 	background: #f2f2f2;
 	.listado{
 	background: #FFF;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 	h1 {
 		color:#000;
 	}
