--- a/jade/index.jade
+++ b/jade/index.jade
@@ -48,9 +48,9 @@ html
 				div
 					// Nav tabs
 					ul.nav.nav-tabs(role='tablist')
-						li.active.listado(role='presentation')
+						li.active(role='presentation')
 							a(href='#lista', aria-controls='lista', role='tab', data-toggle='tab') Cupones existentes
-						li.listado(role='presentation')
+						li(role='presentation')
 							a(href='#nuevacampana', aria-controls='nuevacampana', role='tab', data-toggle='tab') Nuevo
 					// Tab panes
 					.tab-content
