--- a/jade/index.jade
+++ b/jade/index.jade
@@ -255,7 +255,7 @@ html
 												label(data-toggle="tooltip" data-placement="top" title="Ingrese una cantidad") Descuento
 												.input-group
 													.input-group-addon
-														i.fa.fa-tag
+														i.fa.fa-scissors
 													input.form-control.descuento(type='text', placeholder='Introduce el descuento de la campaña')
 													.input-group-addon %
 										.col-xs-12
@@ -280,7 +280,7 @@ html
 												label(data-toggle="tooltip" data-placement="top" title="Ingrese un tipo de plan") Producto 
 												.input-group
 													.input-group-addon
-														i.fa.fa-list(aria-hidden="true")
+														i.fa.fa-rocket(aria-hidden="true")
 													select.form-control
 														option Selecciona un Producto
 														option Fronterizos y legalizados
@@ -290,13 +290,13 @@ html
 												label(data-toggle="tooltip" data-placement="top" title="Ingrese un plan") Plan
 												.input-group
 													.input-group-addon
-														i.fa.fa-gears(aria-hidden="true")
+														i.fa.fa-calendar-check-o(aria-hidden="true")
 													input.form-control.fechafin(placeholder="Introduce el plan del cupón")
 											.col-xs-12.col-md-4
 												label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Ramo
 												.input-group
 													.input-group-addon
-														i.fa.fa-gears(aria-hidden="true")
+														i.fa.fa-industry(aria-hidden="true")
 													input.form-control.fechafin(placeholder="Introduce el ramo del cupón")
 											.col-xs-12
 												br
@@ -305,7 +305,7 @@ html
 												label(data-toggle="tooltip" data-placement="top" title="Descripción breve de campaña") Observaciones
 												.input-group
 													.input-group-addon
-														i.fa.fa-commenting-o(aria-hidden="true")
+														i.fa.fa-comments(aria-hidden="true")
 													textarea.form-control.descripcion(placeholder="Introduce observaciones")
 												.space
 												button.btn.btn-primary 
